* Allow client sided setting of subject preferences via SubjectPreferences servlet and SubjectPreferencesRealm, using config from bcdui/conf/subjectPreferences.xml
* Introduced UserSettingsDefaults to subjectSettings.xml to specify user default permissions (add de.businesscode.bcdui.subjectsettings.SubjectPreferencesRealm to your realms)
* Database syntax does fully support MySQL and Redshift now
* Server sided access to bindings can optionally skip subject settings via backendCanBypassSubjectFilter attribute
* SendMail class added (new gradle dependencies javax.mail:mail, com.sun.activation)

.Client:
* checkbox widget supports more than 1 and 0 via values parameter
* label widget added
* chips widget added
* sticky table (rows/cols) functionality added

.Security
* New cookie settings in context.xml and web.xml
* Preventing some possible injections in server responses
* SubjectFilter can now be applied to virtual file system
* SubjectFilters resolved inline (i.e. value list) are using prepared statements now
* RequestLifeCylce filter sets "Content-Security-Policy" (configurable via filter init param ContentSecurityPolicy)

.Development
* Made bcduiApiSubs.js available which can be used in IDEs for auto-suggest


.Incompatibilities:
** Move shiro settings from web.xml to WEB-INF/shiro.ini, add +
`<listener><listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class></listener>` +
before shiro filter, +
update shiro filter from `org.apache.shiro.web.servlet.IniShiroFilter` to `org.apache.shiro.web.servlet.ShiroFilter`
** Add security features regarding cookies to context.xml and web.xml
** Add SubjectFilters to `bcd_virtualfilesystem.xml` BindingSet
** WrqModifier process() does not any more return a fragment in some cases but does now always work on the input document
** bnd:Coalesce in Binding files was removed